added webpage scraping to the pipeline

--- a/deployment/docker/applications/intelmq/csp-config/pipeline.conf
+++ b/deployment/docker/applications/intelmq/csp-config/pipeline.conf
@@ -16,6 +16,23 @@
             "csp-cve-deduplicator-expert-queue"
         ]
     },
+    "csp-cve-scraping-cvenew-deduplicator-expert": {
+        "source-queue": "csp-cve-scraping-cvenew-deduplicator-expert-queue",
+        "destination-queues": [
+            "csp-rest-api-output-queue"
+        ]
+    },
+    "csp-cve-scraping-cvenew-twitter-collector": {
+        "destination-queues": [
+            "csp-cve-scraping-cvenew-twitter-parser-queue"
+        ]
+    },
+    "csp-cve-scraping-cvenew-twitter-parser": {
+        "source-queue": "csp-cve-scraping-cvenew-twitter-parser-queue",
+        "destination-queues": [
+            "csp-cve-scraping-cvenew-deduplicator-expert-queue"
+        ]
+    },
     "csp-file-collector": {
         "destination-queues": [
             "csp-rest-api-output-queue"
