--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -16,10 +16,6 @@
         "run_mode": "continuous"
     },
     "csp-file-collector": {
-        "description": "CSP Fileinput collector fetches data from a file.",
-        "group": "Collector",
-        "module": "intelmq.bots.collectors.file.collector_file",
-        "name": "File",
         "parameters": {
             "chunk_replicate_header": true,
             "chunk_size": null,
@@ -28,8 +24,12 @@
             "path": "/tmp/intelmq-fileinput",
             "postfix": ".json",
             "provider": "",
-            "rate_limit": 3600
+            "rate_limit": 60
         },
+        "description": "CSP Fileinput collector fetches data from a file.",
+        "group": "Collector",
+        "module": "intelmq.bots.collectors.file.collector_file",
+        "name": "File",
         "enabled": true,
         "run_mode": "continuous"
     },
@@ -173,10 +173,55 @@
     },
     "csp-cve-deduplicator-expert": {
         "parameters": {
-            "filter_keys": "raw,time.observation,destination.as_name",
+            "filter_keys": "raw,time.observation",
             "filter_type": "blacklist",
             "redis_cache_db": 6,
             "redis_cache_host": "redis",
+            "redis_cache_port": 6379,
+            "redis_cache_password": null,
+            "redis_cache_ttl": 86400
+        },
+        "name": "Deduplicator",
+        "group": "Expert",
+        "module": "intelmq.bots.experts.deduplicator.expert",
+        "description": "Deduplicator is the bot responsible for detection and removal of duplicate messages. Messages get cached for <redis_cache_ttl> seconds. If found in the cache, it is assumed to be a duplicate.",
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "csp-cve-scraping-cvenew-twitter-collector": {
+        "parameters": {
+            "feed": "",
+            "provider": "",
+            "http_url": "https://twitter.com/CVEnew/",
+            "http_url_formatting": false,
+            "http_username": null,
+            "http_password": null,
+            "ssl_client_certificate": null,
+            "extract_file": "True or string of file names separated by ,",
+            "rate_limit": 3600
+        },
+        "name": "Generic URL Fetcher",
+        "group": "Collector",
+        "module": "intelmq.bots.collectors.http.collector_http",
+        "description": "Generic URL Fetcher is the bot responsible to get the report from an https://twitter.com/CVEnew/.",
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "csp-cve-scraping-cvenew-twitter-parser": {
+        "parameters": {},
+        "name": "CVE scraping",
+        "group": "Parser",
+        "module": "intelmq.bots.parsers.cve.parser_cve_scraping",
+        "description": "CVE scraping Parser is the bot responsible to parse the reports from twitter page https://twitter.com/CVEnew/.",
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "csp-cve-scraping-cvenew-deduplicator-expert": {
+        "parameters": {
+            "filter_keys": "raw,time.observation",
+            "filter_type": "blacklist",
+            "redis_cache_db": 6,
+            "redis_cache_host": "127.0.0.1",
             "redis_cache_port": 6379,
             "redis_cache_password": null,
             "redis_cache_ttl": 86400
