--- a/deployment/docker/applications/intelmq/positions.conf
+++ b/deployment/docker/applications/intelmq/positions.conf
@@ -1,58 +1,70 @@
 {
     "csp-cve-api-last-collector": {
-        "x": -445,
-        "y": -287
+        "x": 774,
+        "y": -177
     },
     "csp-cve-deduplicator-expert": {
-        "x": -63,
-        "y": -374
+        "x": 552,
+        "y": 171
     },
     "csp-cve-parser": {
-        "x": -244,
-        "y": -288
+        "x": 670,
+        "y": -1
+    },
+    "csp-cve-scraping-cvenew-deduplicator-expert": {
+        "x": 276,
+        "y": 487
+    },
+    "csp-cve-scraping-cvenew-twitter-collector": {
+        "x": -75,
+        "y": 703
+    },
+    "csp-cve-scraping-cvenew-twitter-parser": {
+        "x": 100,
+        "y": 597
     },
     "csp-file-collector": {
-        "x": 256,
-        "y": -620
+        "x": 609,
+        "y": 413
     },
     "csp-rest-api-output": {
-        "x": 105,
-        "y": -487
+        "x": 423,
+        "y": 337
     },
     "cymru-whois-expert": {
-        "x": 475,
-        "y": 126
+        "x": 20,
+        "y": -222
     },
     "deduplicator-expert": {
-        "x": -299,
-        "y": 381
+        "x": -536,
+        "y": 89
     },
     "file-output": {
-        "x": 675,
-        "y": 74
+        "x": 2,
+        "y": -424
     },
     "gethostbyname-1-expert": {
-        "x": 271,
-        "y": 104
+        "x": -172,
+        "y": -159
     },
     "gethostbyname-2-expert": {
-        "x": 354,
-        "y": 291
+        "x": 72,
+        "y": -23
     },
     "spamhaus-drop-collector": {
-        "x": -722,
-        "y": 311
+        "x": -822,
+        "y": -190
     },
     "spamhaus-drop-parser": {
-        "x": -520,
-        "y": 370
+        "x": -716,
+        "y": -17
     },
     "taxonomy-expert": {
-        "x": -74,
-        "y": 340
+        "x": -325,
+        "y": 96
     },
     "url2fqdn-expert": {
-        "x": 143,
-        "y": 271
+        "x": -125,
+        "y": 37
     }
 }
