--- a/deployment/docker/applications/intelmq/Dockerfile
+++ b/deployment/docker/applications/intelmq/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM ubuntu:16.04
 
 MAINTAINER tku
@@ -19,7 +18,8 @@ RUN apt-get install -y nano vim
 
 RUN git clone https://github.com/certtools/intelmq.git /opt/dev_intelmq
 WORKDIR /opt/dev_intelmq
-RUN git checkout tags/1.1.0rc1
+#RUN git checkout tags/1.1.0rc1
+RUN git checkout
 
 ADD test-data /tmp/test-data
 ADD csp-config/cve /opt/dev_intelmq/intelmq/bots/parsers/cve
