SXCSP-306: Enabling SSL revocation on apache

--- a/deployment/docker/base-images/apache2/apache2/conf.d/ssl.conf
+++ b/deployment/docker/base-images/apache2/apache2/conf.d/ssl.conf
@@ -186,9 +186,10 @@ SSLSessionCacheTimeout  300
 #   Note: Inside SSLCARevocationPath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
+SSLCARevocationPath /etc/apache2/ssl/crl/
 #SSLCARevocationPath /etc/ssl/apache2/ssl.crl
 #SSLCARevocationFile /etc/ssl/apache2/ssl.crl/ca-bundle.crl
-#SSLCARevocationCheck chain
+SSLCARevocationCheck chain
 
 #   Client Authentication (Type):
 #   Client certificate verification type and depth.  Types are
