SXCSP-306: Fixing run.sh

--- a/deployment/docker/applications/apache-crl/Dockerfile
+++ b/deployment/docker/applications/apache-crl/Dockerfile
@@ -1,7 +1,8 @@
 FROM csp-docker-java8:1.0
 
 RUN apk add --no-cache bash \
-                     curl
+                     curl \
+                     openssl
 
 COPY run.sh /
 
