SXCSP-306: Fixing run.sh

--- a/deployment/docker/applications/apache-crl/Dockerfile
+++ b/deployment/docker/applications/apache-crl/Dockerfile
@@ -2,7 +2,7 @@ FROM csp-docker-java8:1.0
 
 RUN apk add --no-cache bash \
                      curl \
-                     openssl
+                     libressl
 
 COPY run.sh /
 
