--- a/deployment/docker/applications/apache-crl/docker-compose.yml
+++ b/deployment/docker/applications/apache-crl/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - SSLDatavolume:/etc/apache2/ssl
+            - /opt/csp/internalCerts:/internalCerts
 
 volumes:
     SSLDatavolume:
