SXCSP-306: Adding CRL for internal CA

--- a/deployment/docker/applications/apache-crl/Dockerfile
+++ b/deployment/docker/applications/apache-crl/Dockerfile
@@ -5,6 +5,7 @@ RUN apk add --no-cache bash \
                      libressl
 
 COPY run.sh /
-COPY ca.conf /internalCerts
+RUN mkdir -p /internalCerts
+COPY ca.conf /
 
 ENTRYPOINT ["/run.sh"]
