--- a/deployment/docker/applications/intelmq/docker-compose.yml
+++ b/deployment/docker/applications/intelmq/docker-compose.yml
@@ -13,7 +13,7 @@ services:
        - /opt/csp/intelmq-fileinput/:/tmp/intelmq-fileinput
        - /opt/csp/intelmq-fileoutput/:/tmp/intelmq-fileoutput
        - /opt/csp/logs/imq:/opt/intelmq/var/log
-    ports:
+    expose:
        - ${INTELMQ_DOCR_PORT}
 
   intelmq-adapter:
@@ -27,7 +27,7 @@ services:
         - .env
     command: java  -Xmx512m -Dspring.profiles.active=docker -jar server.jar
     working_dir: /opt/csp
-    ports:
+    expose:
         - 80
     volumes:
         - ./intelmq-emitter-4.0.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
