--- a/csp-apps/rt/rt-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/rt/rt-adapter-emitter/src/main/resources/application.properties
@@ -18,7 +18,7 @@ csp.client.ssl.enabled = true
 csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
-// il config
+# il config
 csp.server.protocol = https
 csp.server.host = ${IL_LOCAL_DOMAIN}
 csp.server.port = ${IL_PORT}
@@ -39,6 +39,8 @@ app.tc.path.circles = /tc
 app.tc.path.teams = /tct
 app.tc.path.localcircle = /api/v1/ltc
 app.tc.path.contacts = /api/v1/contacts
+app.tc.path.teamcontacts = /api/v1/teamcontacts
+app.tc.path.personcontacts = /api/v1/personcontacts
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = 123456
