--- a/deployment/docker/applications/intelmq/csp-config/pipeline.conf
+++ b/deployment/docker/applications/intelmq/csp-config/pipeline.conf
@@ -1,4 +1,10 @@
 {
+    "MISP-Parser": {
+        "source-queue": "MISP-Parser-queue",
+        "destination-queues": [
+            "csp-rest-api-output-queue"
+        ]
+    },
     "csp-cve-api-last-collector": {
         "destination-queues": [
             "csp-cve-parser-queue"
@@ -35,7 +41,7 @@
     },
     "csp-file-collector": {
         "destination-queues": [
-            "csp-rest-api-output-queue"
+            "MISP-Parser-queue"
         ]
     },
     "csp-rest-api-output": {
