--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -221,7 +221,7 @@
             "filter_keys": "raw,time.observation",
             "filter_type": "blacklist",
             "redis_cache_db": 6,
-            "redis_cache_host": "127.0.0.1",
+            "redis_cache_host": "csp-redis",
             "redis_cache_port": 6379,
             "redis_cache_password": null,
             "redis_cache_ttl": 86400
@@ -230,6 +230,15 @@
         "group": "Expert",
         "module": "intelmq.bots.experts.deduplicator.expert",
         "description": "Deduplicator is the bot responsible for detection and removal of duplicate messages. Messages get cached for <redis_cache_ttl> seconds. If found in the cache, it is assumed to be a duplicate.",
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "MISP-Parser": {
+        "parameters": {},
+        "name": "MISP",
+        "group": "Parser",
+        "module": "intelmq.bots.parsers.misp.parser",
+        "description": "MISP event parser.",
         "enabled": true,
         "run_mode": "continuous"
     }
