--- a/deployment/docker/applications/intelmq/positions.conf
+++ b/deployment/docker/applications/intelmq/positions.conf
@@ -1,70 +1,74 @@
 {
+    "MISP-Parser": {
+        "x": 743,
+        "y": 349
+    },
     "csp-cve-api-last-collector": {
-        "x": 774,
-        "y": -177
+        "x": 838,
+        "y": -278
     },
     "csp-cve-deduplicator-expert": {
-        "x": 552,
-        "y": 171
+        "x": 695,
+        "y": 114
     },
     "csp-cve-parser": {
-        "x": 670,
-        "y": -1
+        "x": 757,
+        "y": -87
     },
     "csp-cve-scraping-cvenew-deduplicator-expert": {
-        "x": 276,
-        "y": 487
+        "x": 362,
+        "y": 393
     },
     "csp-cve-scraping-cvenew-twitter-collector": {
-        "x": -75,
-        "y": 703
+        "x": 22,
+        "y": 651
     },
     "csp-cve-scraping-cvenew-twitter-parser": {
-        "x": 100,
-        "y": 597
+        "x": 198,
+        "y": 532
     },
     "csp-file-collector": {
-        "x": 609,
-        "y": 413
+        "x": 893,
+        "y": 530
     },
     "csp-rest-api-output": {
-        "x": 423,
-        "y": 337
+        "x": 545,
+        "y": 266
     },
     "cymru-whois-expert": {
         "x": 20,
-        "y": -222
+        "y": -220
     },
     "deduplicator-expert": {
-        "x": -536,
-        "y": 89
+        "x": -528,
+        "y": 80
     },
     "file-output": {
         "x": 2,
-        "y": -424
+        "y": -420
     },
     "gethostbyname-1-expert": {
-        "x": -172,
+        "x": -170,
         "y": -159
     },
     "gethostbyname-2-expert": {
-        "x": 72,
-        "y": -23
+        "x": 56,
+        "y": -24
     },
     "spamhaus-drop-collector": {
-        "x": -822,
-        "y": -190
+        "x": -816,
+        "y": -181
     },
     "spamhaus-drop-parser": {
-        "x": -716,
-        "y": -17
+        "x": -704,
+        "y": -16
     },
     "taxonomy-expert": {
-        "x": -325,
-        "y": 96
+        "x": -328,
+        "y": 88
     },
     "url2fqdn-expert": {
-        "x": -125,
-        "y": 37
+        "x": -134,
+        "y": 38
     }
 }
