--- a/deployment/docker/applications/vcb/Dockerfile.jitsimeet
+++ b/deployment/docker/applications/vcb/Dockerfile.jitsimeet
@@ -7,7 +7,7 @@ RUN apt-get -y update \
 RUN wget -qO - https://download.jitsi.org/jitsi-key.gpg.key | apt-key add - \
  && echo 'deb http://download.jitsi.org stable/' >> /etc/apt/sources.list \
  && apt-get -y update \
- && apt-get -y install jitsi-meet=1.0.2635-1 jitsi-videobridge=1011-1 jicofo=1.0-388-1 jitsi-meet-web=1.0.2441-1 jitsi-meet-web-config=1.0.2441-1 jitsi-meet-prosody=1.0.2441-1
+ && apt-get -y install jitsi-meet=1.0.3548-1 jitsi-videobridge jicofo jitsi-meet-web jitsi-meet-web-config jitsi-meet-prosody
 
 RUN rm -rf /etc/nginx/sites-enabled/* \
  && rm -rf /etc/prosody/conf.d/*
