--- a/csp-apps/pom.xml
+++ b/csp-apps/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>com.intrasoft.csp</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>4.0.5-SNAPSHOT</version>
+	<version>4.0.6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>CSP Applications</name>
 
@@ -40,7 +40,7 @@
 	</properties>
 
 	<distributionManagement>
-		<repository>
+<!--		<repository>
 			<id>sastix-releases-repo</id>
 			<name>release</name>
 			<url>https://nexus.sastix.com/repository/maven-releases/</url>
@@ -49,7 +49,7 @@
 			<id>sastix-snapshots-repo</id>
 			<name>snapshot</name>
 			<url>https://nexus.sastix.com/repository/maven-snapshots/</url>
-		</snapshotRepository>
+		</snapshotRepository> -->
 	</distributionManagement>
 
 	<repositories>
