change to 4.0.0 library

--- a/csp-apps/rt/rt-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/rt/rt-adapter-emitter/src/main/resources/application.properties
@@ -32,6 +32,8 @@ emitter.server.host = localhost
 emitter.server.port = 3001
 
 
+# Using properties for a mocked TC nodejs server you can start under dummyserver project
+# You can override them to what ever is applicable - see docker profile for our docker env
 app.tc.protocol = https
 app.tc.host = localhost
 app.tc.port = 9000
@@ -39,6 +41,8 @@ app.tc.path.circles = /tc
 app.tc.path.teams = /tct
 app.tc.path.localcircle = /api/v1/ltc
 app.tc.path.contacts = /api/v1/contacts
+app.tc.path.teamcontacts = /api/v1/teamcontacts
+app.tc.path.personcontacts = /api/v1/personcontacts
 app.tc.client.ssl.enabled=true
 app.tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 app.tc.client.ssl.jks.keystore.password = 123456
