--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>com.intrasoft.csp</groupId>
 		<artifactId>configuration</artifactId>
-		<version>4.0.6-SNAPSHOT</version>
+		<version>4.0.7-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.intrasoft.csp</groupId>
 	<artifactId>conf-client-cspapp</artifactId>
-	<version>4.0.6-SNAPSHOT</version>
+	<version>4.0.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Configuration Service CSP Installer</name>
@@ -45,16 +45,12 @@
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
-			<version>3.1.0</version>
+			<version>3.3.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -82,7 +78,7 @@
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
             <artifactId>conf-client</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.intrasoft.csp</groupId>
@@ -103,13 +99,6 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
