--- a/deployment/docker/applications/intelmq/Dockerfile
+++ b/deployment/docker/applications/intelmq/Dockerfile
@@ -12,12 +12,12 @@ RUN apt-get update &&   \
  apt-get install -y apt-utils git apache2 php libapache2-mod-php7.0 && \
  apt-get install -y sudo build-essential libcurl4-gnutls-dev libgnutls28-dev python3-dev && \
 # apt-get install -y nano vim && \
- rm -rf /var/lib/apt/lists/*
+ rm -rf /var/lib/apt/lists/*checkout
 
 RUN git clone https://github.com/certtools/intelmq.git /opt/dev_intelmq
 WORKDIR /opt/dev_intelmq
-#RUN git checkout tags/1.1.0rc1
-RUN git checkout
+RUN git checkout tags/1.1.1
+#RUN git checkout
 
 ADD test-data /tmp/test-data
 ADD csp-config/cve /opt/dev_intelmq/intelmq/bots/parsers/cve
@@ -28,11 +28,14 @@ RUN pip3 install . && \
  cp /opt/intelmq/etc/examples/harmonization.conf /opt/intelmq/etc/ && \
  useradd -d /opt/intelmq -U -s /bin/bash intelmq && \
  mkdir -p /opt/intelmq/var/log && \
- chmod -R 0777 /opt/intelmq && \
+#review chmod -R 775 /opt/intelmq && \
  chown -R intelmq:intelmq /opt/intelmq
 
-RUN git clone https://github.com/certtools/intelmq-manager.git /tmp/intelmq-manager && \
- cp -R /tmp/intelmq-manager/intelmq-manager/* /var/www/html/ && \
+RUN git clone https://github.com/certtools/intelmq-manager.git /tmp/intelmq-manager
+WORKDIR /tmp/intelmq-manager
+RUN git checkout tags/1.1.0
+
+RUN cp -R /tmp/intelmq-manager/intelmq-manager/* /var/www/html/ && \
  mv /var/www/html/index.html /var/www/html/index.html.save && \
  chown -R www-data:www-data /var/www/html/ && \
  usermod -a -G intelmq www-data && \
@@ -75,5 +78,5 @@ RUN chmod u+x /scripts/run.sh && \
     echo "Added CSP custom runtime done" && \
     echo "DONE SUCCESSFULLY!"
 
-ENTRYPOINT ["/scripts/run.sh"]  
+ENTRYPOINT ["/scripts/run.sh"]
 
