--- a/csp-apps/rt/rt-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/rt/rt-adapter-emitter/src/main/resources/application.properties
@@ -18,7 +18,7 @@ csp.client.ssl.enabled = true
 csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
-# il config
+// il config
 csp.server.protocol = https
 csp.server.host = ${IL_LOCAL_DOMAIN}
 csp.server.port = ${IL_PORT}
@@ -32,6 +32,8 @@ emitter.server.host = localhost
 emitter.server.port = 3001
 
 
+# Using properties for a mocked TC nodejs server you can start under dummyserver project
+# You can override them to what ever is applicable - see docker profile for our docker env
 app.tc.protocol = https
 app.tc.host = localhost
 app.tc.port = 9000
