--- a/deployment/docker/applications/intelmq/csp-config/defaults.conf
+++ b/deployment/docker/applications/intelmq/csp-config/defaults.conf
@@ -21,10 +21,10 @@
     "log_processed_messages_count": 500,
     "log_processed_messages_seconds": 900,
     "logging_handler": "file",
-    "logging_level": "DEBUG",
+    "logging_level": "INFO",
     "logging_path": "/opt/intelmq/var/log/",
     "logging_syslog": "/dev/log",
-    "proccess_manager": "intelmq",
+    "process_manager": "intelmq",
     "rate_limit": 0,
     "source_pipeline_db": 2,
     "source_pipeline_host": "redis",
