handle missing authorization header

--- a/deployment/docker/applications/misp/docker-compose.yml
+++ b/deployment/docker/applications/misp/docker-compose.yml
@@ -65,6 +65,8 @@ services:
             - MYSQL_ROOT_PASSWORD=changeit
 
     misp-proxy:
+        depends_on:
+            - misp-web
         container_name: csp-misp_proxy
         image: node:8.16.0-alpine
         domainname: ${LOCAL_DOMAIN}
@@ -75,8 +77,9 @@ services:
             - API_PORT=800
         volumes:
             - ./misp-proxy/:/opt/misp-proxy/
+            - MISPSharedDatavolume:/run/secrets
         working_dir: /opt/misp-proxy
-        command: sh -c "npm install && node proxy.js"
+        command: sh -c "while [ ! -f /run/secrets/authkey ]; do echo "Waiting..." ; sleep 1 ; done && npm install && node proxy.js"
 
 
 volumes:
