--- a/deployment/docker/central/docker-compose.yml
+++ b/deployment/docker/central/docker-compose.yml
@@ -9,14 +9,17 @@ services:
         working_dir: /opt/csp
         environment:
             - CFG_DOCR_PORT=5443
+            - SERVER_ADDRESS=0.0.0.0
             - CFG_PATH_REPO=/opt/cfg/data
             - ENABLE_OAM=false
+            - SPRING_HTTP_MULTIPART_MAXFILESIZE=2512MB
+            - SPRING_HTTP_MULTIPART_MAXREQUESTSIZE=2512MB
         volumes:
-            - ./conf-server-4.0.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
+            - ./conf-server-3.6.0-SNAPSHOT-exec.jar:/opt/csp/server.jar
             - /opt/csp/logs/:/opt/csplogs
-            - ./cfg/data:/opt/cfg/data
+            - CGF_SERVER_DATA_VOLUME:/opt/cfg/data
         ports:
-            - 127.0.0.1:19090:5443
+            - 19090:5443
 
     sa-cfg-client:
         image: csp-docker-java8:1.0
@@ -30,15 +33,25 @@ services:
          - CONF_SERVER_HOST=csp-sa_cfg
          - CONF_SERVER_PORT=5443
          - CONF_SERVER_PROTOCOL=http
+         - UPDHOST=central.demo.melicertes.eu
          - SERVER_ADDRESS=0.0.0.0
+         - INSTALLATION_FORCED=true
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - ./conf-client-cspapp-4.0.0-SNAPSHOT.jar:/opt/csp/server.jar
-            - ./cfg-client/data:/opt/cspinst/
-            - ./cfg-client/root:/root/
+            - ./conf-client-cspapp-4.0.7-SNAPSHOT.jar:/opt/csp/server.jar
+            - CGF_CLIENT_DATA_VOLUME:/opt/cspinst/
+            - CGF_CLIENT_ROOT_VOLUME:/root/
             - /opt/csp/:/opt/csp/
         ports:
-            - 127.0.0.1:18080:18080
+            - 18080:18080
+
+volumes:
+    CGF_SERVER_DATA_VOLUME:
+        external: true
+    CGF_CLIENT_DATA_VOLUME:
+        external: true
+    CGF_CLIENT_ROOT_VOLUME:
+        external: true
 
 networks:
   default:
