--- a/deployment/docker/base-images/misp-image/Dockerfile
+++ b/deployment/docker/base-images/misp-image/Dockerfile
@@ -38,7 +38,7 @@ MAINTAINER Christos Panagiotou
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get dist-upgrade -y && apt-get autoremove -y && apt-get clean
 RUN apt-get install -y software-properties-common
-RUN apt-get install -y postfix ssmtp
+RUN apt-get install -y postfix
 RUN apt-get install -y mysql-client curl gcc git gnupg-agent make python openssl redis-server sudo vim zip locales
 
 RUN locale-gen en_US.UTF-8
