--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application-develop.properties
@@ -30,14 +30,14 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 # Email
-app.mail.sender.name=Dimitris Karadimas
-app.mail.sender.email=karadimas@ieee.org
+app.mail.sender.name=CSP User
+app.mail.sender.email=do-not-reply@sastix.com
 
 
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
 spring.mail.username=do-not-reply@sastix.com
-spring.mail.password=a!Str-1-3-X2
+spring.mail.password=
 spring.mail.smtp.auth=true
 spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
