--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/application.properties
@@ -30,7 +30,7 @@ vcbadmin.emailNotifications.waitAfterSubmission=15
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
 spring.mail.username=do-not-reply@sastix.com
-spring.mail.password=a!Str-1-3-X2
+spring.mail.password=
 spring.mail.smtp.auth=true
 spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
