--- a/csp-apps/integration-layer/il-commons/pom.xml
+++ b/csp-apps/integration-layer/il-commons/pom.xml
@@ -62,7 +62,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>zero-allocation-hashing</artifactId>
+            <version>0.9</version>
+        </dependency>
 
     </dependencies>
 
