--- a/csp-apps/vcbridge/vcb-admin/pom.xml
+++ b/csp-apps/vcbridge/vcb-admin/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>il-commons</artifactId>
-			<version>${project.version}</version>
+			<version>4.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
@@ -82,7 +82,7 @@
 		<dependency>
 			<groupId>org.mnode.ical4j</groupId>
 			<artifactId>ical4j</artifactId>
-			<version>3.0.9</version>
+			<version>3.0.11</version>
 		</dependency>
 
 		<dependency>
